--- a/package.json
+++ b/package.json
@@ -8,10 +8,20 @@
     "visualize": "meteor --production --extra-packages bundle-visualizer"
   },
   "dependencies": {
-    "@babel/runtime": "^7.15.4",
-    "meteor-node-stubs": "^1.1.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "@babel/runtime": "7.15.4",
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.5.0",
+    "@mui/material": "5.5.0",
+    "@mui/styles": "^5.5.0",
+    "axios": "^0.26.1",
+    "joi": "^17.6.0",
+    "lodash": "^4.17.21",
+    "meteor-node-stubs": "1.1.0",
+    "papaparse": "^5.3.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "recharts": "^2.1.9"
   },
   "meteor": {
     "mainModule": {
